--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button{
+    height:35px;
+}
+
+button p {
+    line-height:0px;
+}
+
+.progress-spinner{
+    width: 4em;
+    height: 4em;
+}
+
+mat-form-field{
+    width:300px;
+}
+
+.half{
+  width:400px;
+  display:inline-flex;
+  height:auto;
+  margin:auto;
+}
+.inlineitemes{
+  display:inline-flex;
+}
