--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -25,6 +25,7 @@
             Login
           </p>
           <mat-progress-spinner
+            [diameter]="30"
             *ngIf="loadSpinner"
             id="signin-spinner"
             class="progress-spinner"
@@ -78,6 +79,7 @@
             Register
           </p>
           <mat-progress-spinner
+            [diameter]="30"
             *ngIf="loadSpinner"
             id="signin-spinner"
             class="progress-spinner"
