--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,9 @@
-<p>
-  header works!
-</p>
+<mat-toolbar color = "primary">
+  <span class = "gap">
+      <mat-icon aria-hidden="false" aria-label="Calci">home</mat-icon>
+  </span>
+  <span class = "gap">
+      <mat-icon aria-hidden="false" aria-label="Calci">search</mat-icon>
+  </span>
+  <span class = "gap">About</span>
+</mat-toolbar>
