--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,9 @@
-<p>
-  footer works!
-</p>
+<mat-tab-group headerPosition="below" mat-stretch-tabs class="mat-elevation-z8">
+  <mat-tab label = "Calci">
+    <app-calci></app-calci>
+  </mat-tab>
+  <mat-tab label = "History">
+    <app-history></app-history>
+  </mat-tab>
+  <mat-tab label = "Profile"> Profile </mat-tab>
+</mat-tab-group>
