--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,8 @@
+<mat-divider></mat-divider>
 <mat-tab-group headerPosition="below" mat-stretch-tabs class="mat-elevation-z8">
   <mat-tab label = "Calci">
     <app-calci></app-calci>
+    <mat-divider></mat-divider>
   </mat-tab>
   <mat-tab label = "History">
     <app-history></app-history>
