--- a/src/app/calci/calci.component.html
+++ b/src/app/calci/calci.component.html
@@ -4,13 +4,12 @@
 </textarea>
 <form style="display: grid;">
         <mat-form-field class="example-full-width">
-            <span matPrefix>My &nbsp;</span>
+            <span matPrefix>SHOP &nbsp;</span>
             <input type="text" matInput placeholder="Customer">
             <mat-icon matSuffix>mode_edit</mat-icon>
           </mat-form-field>
       <button mat-raised-button color="primary">
-          SAVE
-          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          SAVE TRANSACTION
       </button>
 </form>
 <mat-divider></mat-divider>
