--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
     <app-calci></app-calci>
     <mat-divider></mat-divider>
   </mat-tab>
-  <mat-tab label = "History">
+  <mat-tab (click)="listCustomers()" label = "History">
     <app-history></app-history>
   </mat-tab>
   <mat-tab label = "Profile"> Profile </mat-tab>
