--- a/src/app/calci/calci.component.css
+++ b/src/app/calci/calci.component.css
@@ -11,3 +11,38 @@ td{
   .example-full-width {
     width: 100%;
   }
+  form {
+    display: inline;
+  }
+  form button {
+    width: 40%;
+    margin: 10px;
+    
+  }
+
+  .calculator {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .calculator-screen {
+    width: 100%;
+    font-size: 3rem;
+    height: 80px;
+    background-color: #252525;
+    color: #fff;
+  }
+  
+  button {
+    height: 60px;
+    background-color: #fff;
+    border-radius: 3px;
+    border: 1px solid #c4c4c4;
+    background-color: transparent;
+    font-size: 2rem;
+    color: #333;
+    background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0,0,0,.04));
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
+    text-shadow: 0 1px rgba(255,255,255,.4);
+  }
+  
